build order item data